fix: overflow clip on small screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-  @apply dark:bg-wdDark bg-white overflow-x-hidden overflow-y-auto;
+  @apply dark:bg-wdDark bg-white overflow-x-clip overflow-y-auto;
 }
 
 .widget-title {
